npc/ast/pascalParser.cpp

// Generated from /home/user/projects/naive-pascal-compiler/grammar/pascal.g4 by ANTLR 4.12.0


#include "pascalListener.hpp"
#include "pascalVisitor.hpp"

#include "pascalParser.hpp"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct PascalParserStaticData final {
  PascalParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  PascalParserStaticData(const PascalParserStaticData&) = delete;
  PascalParserStaticData(PascalParserStaticData&&) = delete;
  PascalParserStaticData& operator=(const PascalParserStaticData&) = delete;
  PascalParserStaticData& operator=(PascalParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag pascalParserOnceFlag;
PascalParserStaticData *pascalParserStaticData = nullptr;

void pascalParserInitialize() {
  assert(pascalParserStaticData == nullptr);
  auto staticData = std::make_unique<PascalParserStaticData>(
    std::vector<std::string>{
      "program", "programHeading", "identifier", "block", "usesUnitsPart", 
      "labelDeclarationPart", "label", "constantDefinitionPart", "constantDefinition", 
      "constantChr", "constant", "unsignedNumber", "unsignedInteger", "unsignedReal", 
      "sign", "bool_", "string", "typeDefinitionPart", "typeDefinition", 
      "functionType", "procedureType", "type_", "simpleType", "scalarType", 
      "subrangeType", "typeIdentifier", "structuredType", "unpackedStructuredType", 
      "stringtype", "arrayType", "typeList", "indexType", "componentType", 
      "recordType", "fieldList", "fixedPart", "recordSection", "variantPart", 
      "tag", "variant", "setType", "baseType", "fileType", "pointerType", 
      "variableDeclarationPart", "variableDeclaration", "procedureAndFunctionDeclarationPart", 
      "procedureOrFunctionDeclaration", "procedureDeclaration", "formalParameterList", 
      "formalParameterSection", "parameterGroup", "identifierList", "constList", 
      "functionDeclaration", "resultType", "statement", "unlabelledStatement", 
      "simpleStatement", "assignmentStatement", "variable", "expression", 
      "relationaloperator", "simpleExpression", "additiveoperator", "term", 
      "multiplicativeoperator", "signedFactor", "factor", "unsignedConstant", 
      "functionDesignator", "parameterList", "set_", "elementList", "element", 
      "procedureStatement", "actualParameter", "parameterwidth", "gotoStatement", 
      "emptyStatement_", "empty_", "structuredStatement", "compoundStatement", 
      "statements", "conditionalStatement", "ifStatement", "caseStatement", 
      "caseListElement", "repetetiveStatement", "whileStatement", "repeatStatement", 
      "forStatement", "forList", "initialValue", "finalValue", "withStatement", 
      "recordVariableList"
    },
    std::vector<std::string>{
      "", "'AND'", "'ARRAY'", "'BEGIN'", "'BOOLEAN'", "'CASE'", "'CHAR'", 
      "'CHR'", "'CONST'", "'DIV'", "'DO'", "'DOWNTO'", "'ELSE'", "'END'", 
      "'FILE'", "'FOR'", "'FUNCTION'", "'GOTO'", "'IF'", "'IN'", "'INTEGER'", 
      "'LABEL'", "'MOD'", "'NIL'", "'NOT'", "'OF'", "'OR'", "'PACKED'", 
      "'PROCEDURE'", "'PROGRAM'", "'REAL'", "'RECORD'", "'REPEAT'", "'SET'", 
      "'THEN'", "'TO'", "'TYPE'", "'UNTIL'", "'VAR'", "'WHILE'", "'WITH'", 
      "'+'", "'-'", "'*'", "'/'", "':='", "','", "';'", "':'", "'='", "'<>'", 
      "'<'", "'<='", "'>='", "'>'", "'('", "')'", "'['", "'(.'", "']'", 
      "'.)'", "'^'", "'@'", "'.'", "'..'", "'{'", "'}'", "'UNIT'", "'INTERFACE'", 
      "'USES'", "'STRING'", "'IMPLEMENTATION'", "'TRUE'", "'FALSE'"
    },
    std::vector<std::string>{
      "", "AND", "ARRAY", "BEGIN", "BOOLEAN", "CASE", "CHAR", "CHR", "CONST", 
      "DIV", "DO", "DOWNTO", "ELSE", "END", "FILE", "FOR", "FUNCTION", "GOTO", 
      "IF", "IN", "INTEGER", "LABEL", "MOD", "NIL", "NOT", "OF", "OR", "PACKED", 
      "PROCEDURE", "PROGRAM", "REAL", "RECORD", "REPEAT", "SET", "THEN", 
      "TO", "TYPE", "UNTIL", "VAR", "WHILE", "WITH", "PLUS", "MINUS", "STAR", 
      "SLASH", "ASSIGN", "COMMA", "SEMI", "COLON", "EQUAL", "NOT_EQUAL", 
      "LT", "LE", "GE", "GT", "LPAREN", "RPAREN", "LBRACK", "LBRACK2", "RBRACK", 
      "RBRACK2", "POINTER", "AT", "DOT", "DOTDOT", "LCURLY", "RCURLY", "UNIT", 
      "INTERFACE", "USES", "STRING", "IMPLEMENTATION", "TRUE", "FALSE", 
      "WS", "COMMENT_1", "COMMENT_2", "IDENT", "STRING_LITERAL", "NUM_INT", 
      "NUM_REAL"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  pascalParserStaticData = staticData.release();
}

}

pascalParser::pascalParser(TokenStream *input) : pascalParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

pascalParser::pascalParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  pascalParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *pascalParserStaticData->atn, pascalParserStaticData->decisionToDFA, pascalParserStaticData->sharedContextCache, options);
}

pascalParser::~pascalParser() {
  delete _interpreter;
}

const atn::ATN& pascalParser::getATN() const {
  return *pascalParserStaticData->atn;
}

std::string pascalParser::getGrammarFileName() const {
  return "pascal.g4";
}

const std::vector<std::string>& pascalParser::getRuleNames() const {
  return pascalParserStaticData->ruleNames;
}

const dfa::Vocabulary& pascalParser::getVocabulary() const {
  return pascalParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView pascalParser::getSerializedATN() const {
  return pascalParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

pascalParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pascalParser::ProgramHeadingContext* pascalParser::ProgramContext::programHeading() {
  return getRuleContext<pascalParser::ProgramHeadingContext>(0);
}

pascalParser::BlockContext* pascalParser::ProgramContext::block() {
  return getRuleContext<pascalParser::BlockContext>(0);
}

tree::TerminalNode* pascalParser::ProgramContext::DOT() {
  return getToken(pascalParser::DOT, 0);
}

tree::TerminalNode* pascalParser::ProgramContext::EOF() {
  return getToken(pascalParser::EOF, 0);
}

tree::TerminalNode* pascalParser::ProgramContext::INTERFACE() {
  return getToken(pascalParser::INTERFACE, 0);
}


size_t pascalParser::ProgramContext::getRuleIndex() const {
  return pascalParser::RuleProgram;
}

void pascalParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pascalListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void pascalParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pascalListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any pascalParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::ProgramContext* pascalParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, pascalParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(194);
    programHeading();
    setState(196);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == pascalParser::INTERFACE) {
      setState(195);
      match(pascalParser::INTERFACE);
    }
    setState(198);
    block();
    setState(199);
    match(pascalParser::DOT);
    setState(200);
    match(pascalParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramHeadingContext ------------------------------------------------------------------

pascalParser::ProgramHeadingContext::ProgramHeadingContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* pascalParser::ProgramHeadingContext::PROGRAM() {
  return getToken(pascalParser::PROGRAM, 0);
}

pascalParser::IdentifierContext* pascalParser::ProgramHeadingContext::identifier() {
  return getRuleContext<pascalParser::IdentifierContext>(0);
}

tree::TerminalNode* pascalParser::ProgramHeadingContext::SEMI() {
  return getToken(pascalParser::SEMI, 0);
}

tree::TerminalNode* pascalParser::ProgramHeadingContext::LPAREN() {
  return getToken(pascalParser::LPAREN, 0);
}

pascalParser::IdentifierListContext* pascalParser::ProgramHeadingContext::identifierList() {
  return getRuleContext<pascalParser::IdentifierListContext>(0);
}

tree::TerminalNode* pascalParser::ProgramHeadingContext::RPAREN() {
  return getToken(pascalParser::RPAREN, 0);
}

tree::TerminalNode* pascalParser::ProgramHeadingContext::UNIT() {
  return getToken(pascalParser::UNIT, 0);
}


size_t pascalParser::ProgramHeadingContext::getRuleIndex() const {
  return pascalParser::RuleProgramHeading;
}

void pascalParser::ProgramHeadingContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pascalListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgramHeading(this);
}

void pascalParser::ProgramHeadingContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pascalListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgramHeading(this);
}


std::any pascalParser::ProgramHeadingContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitProgramHeading(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::ProgramHeadingContext* pascalParser::programHeading() {
  ProgramHeadingContext *_localctx = _tracker.createInstance<ProgramHeadingContext>(_ctx, getState());
  enterRule(_localctx, 2, pascalParser::RuleProgramHeading);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(216);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case pascalParser::PROGRAM: {
        enterOuterAlt(_localctx, 1);
        setState(202);
        match(pascalParser::PROGRAM);
        setState(203);
        identifier();
        setState(208);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == pascalParser::LPAREN) {
          setState(204);
          match(pascalParser::LPAREN);
          setState(205);
          identifierList();
          setState(206);
          match(pascalParser::RPAREN);
        }
        setState(210);
        match(pascalParser::SEMI);
        break;
      }

      case pascalParser::UNIT: {
        enterOuterAlt(_localctx, 2);
        setState(212);
        match(pascalParser::UNIT);
        setState(213);
        identifier();
        setState(214);
        match(pascalParser::SEMI);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierContext ------------------------------------------------------------------

pascalParser::IdentifierContext::IdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* pascalParser::IdentifierContext::IDENT() {
  return getToken(pascalParser::IDENT, 0);
}


size_t pascalParser::IdentifierContext::getRuleIndex() const {
  return pascalParser::RuleIdentifier;
}

void pascalParser::IdentifierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pascalListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdentifier(this);
}

void pascalParser::IdentifierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pascalListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIdentifier(this);
}


std::any pascalParser::IdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitIdentifier(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::IdentifierContext* pascalParser::identifier() {
  IdentifierContext *_localctx = _tracker.createInstance<IdentifierContext>(_ctx, getState());
  enterRule(_localctx, 4, pascalParser::RuleIdentifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(218);
    match(pascalParser::IDENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

pascalParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

pascalParser::CompoundStatementContext* pascalParser::BlockContext::compoundStatement() {
  return getRuleContext<pascalParser::CompoundStatementContext>(0);
}

std::vector<pascalParser::LabelDeclarationPartContext *> pascalParser::BlockContext::labelDeclarationPart() {
  return getRuleContexts<pascalParser::LabelDeclarationPartContext>();
}

pascalParser::LabelDeclarationPartContext* pascalParser::BlockContext::labelDeclarationPart(size_t i) {
  return getRuleContext<pascalParser::LabelDeclarationPartContext>(i);
}

std::vector<pascalParser::ConstantDefinitionPartContext *> pascalParser::BlockContext::constantDefinitionPart() {
  return getRuleContexts<pascalParser::ConstantDefinitionPartContext>();
}

pascalParser::ConstantDefinitionPartContext* pascalParser::BlockContext::constantDefinitionPart(size_t i) {
  return getRuleContext<pascalParser::ConstantDefinitionPartContext>(i);
}

std::vector<pascalParser::TypeDefinitionPartContext *> pascalParser::BlockContext::typeDefinitionPart() {
  return getRuleContexts<pascalParser::TypeDefinitionPartContext>();
}

pascalParser::TypeDefinitionPartContext* pascalParser::BlockContext::typeDefinitionPart(size_t i) {
  return getRuleContext<pascalParser::TypeDefinitionPartContext>(i);
}

std::vector<pascalParser::VariableDeclarationPartContext *> pascalParser::BlockContext::variableDeclarationPart() {
  return getRuleContexts<pascalParser::VariableDeclarationPartContext>();
}

pascalParser::VariableDeclarationPartContext* pascalParser::BlockContext::variableDeclarationPart(size_t i) {
  return getRuleContext<pascalParser::VariableDeclarationPartContext>(i);
}

std::vector<pascalParser::ProcedureAndFunctionDeclarationPartContext *> pascalParser::BlockContext::procedureAndFunctionDeclarationPart() {
  return getRuleContexts<pascalParser::ProcedureAndFunctionDeclarationPartContext>();
}

pascalParser::ProcedureAndFunctionDeclarationPartContext* pascalParser::BlockContext::procedureAndFunctionDeclarationPart(size_t i) {
  return getRuleContext<pascalParser::ProcedureAndFunctionDeclarationPartContext>(i);
}

std::vector<pascalParser::UsesUnitsPartContext *> pascalParser::BlockContext::usesUnitsPart() {
  return getRuleContexts<pascalParser::UsesUnitsPartContext>();
}

pascalParser::UsesUnitsPartContext* pascalParser::BlockContext::usesUnitsPart(size_t i) {
  return getRuleContext<pascalParser::UsesUnitsPartContext>(i);
}

std::vector<tree::TerminalNode *> pascalParser::BlockContext::IMPLEMENTATION() {
  return getTokens(pascalParser::IMPLEMENTATION);
}

tree::TerminalNode* pascalParser::BlockContext::IMPLEMENTATION(size_t i) {
  return getToken(pascalParser::IMPLEMENTATION, i);
}


size_t pascalParser::BlockContext::getRuleIndex() const {
  return pascalParser::RuleBlock;
}

void pascalParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pascalListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void pascalParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pascalListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


std::any pascalParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::BlockContext* pascalParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 6, pascalParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(229);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((((_la - 8) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 8)) & -6917529026297847551) != 0)) {
      setState(227);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case pascalParser::LABEL: {
          setState(220);
          labelDeclarationPart();
          break;
        }

        case pascalParser::CONST: {
          setState(221);
          constantDefinitionPart();
          break;
        }

        case pascalParser::TYPE: {
          setState(222);
          typeDefinitionPart();
          break;
        }

        case pascalParser::VAR: {
          setState(223);
          variableDeclarationPart();
          break;
        }

        case pascalParser::FUNCTION:
        case pascalParser::PROCEDURE: {
          setState(224);
          procedureAndFunctionDeclarationPart();
          break;
        }

        case pascalParser::USES: {
          setState(225);
          usesUnitsPart();
          break;
        }

        case pascalParser::IMPLEMENTATION: {
          setState(226);
          match(pascalParser::IMPLEMENTATION);
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(231);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(232);
    compoundStatement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UsesUnitsPartContext ------------------------------------------------------------------

pascalParser::UsesUnitsPartContext::UsesUnitsPartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* pascalParser::UsesUnitsPartContext::USES() {
  return getToken(pascalParser::USES, 0);
}

pascalParser::IdentifierListContext* pascalParser::UsesUnitsPartContext::identifierList() {
  return getRuleContext<pascalParser::IdentifierListContext>(0);
}

tree::TerminalNode* pascalParser::UsesUnitsPartContext::SEMI() {
  return getToken(pascalParser::SEMI, 0);
}


size_t pascalParser::UsesUnitsPartContext::getRuleIndex() const {
  return pascalParser::RuleUsesUnitsPart;
}

void pascalParser::UsesUnitsPartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pascalListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUsesUnitsPart(this);
}

void pascalParser::UsesUnitsPartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pascalListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUsesUnitsPart(this);
}


std::any pascalParser::UsesUnitsPartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitUsesUnitsPart(this);
  else
    return visitor->visitChildren(this);
}

pascalParser::UsesUnitsPartContext* pascalParser::usesUnitsPart() {
  UsesUnitsPartContext *_localctx = _tracker.createInstance<UsesUnitsPartContext>(_ctx, getState());
  enterRule(_localctx, 8, pascalParser::RuleUsesUnitsPart);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(234);
    match(pascalParser::USES);
    setState(235);
    identifierList();
    setState(236);
    match(pascalParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LabelDeclarationPartContext ------------------------------------------------------------------

pascalParser::LabelDeclarationPartContext::LabelDeclarationPartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* pascalParser::LabelDeclarationPartContext::LABEL() {
  return getToken(pascalParser::LABEL, 0);
}

std::vector<pascalParser::LabelContext *> pascalParser::LabelDeclarationPartContext::label() {
  return getRuleContexts<pascalParser::LabelContext>();
}

pascalParser::LabelContext* pascalParser::LabelDeclarationPartContext::label(size_t i) {
  return getRuleContext<pascalParser::LabelContext>(i);
}

tree::TerminalNode* pascalParser::LabelDeclarationPartContext::SEMI() {
  return getToken(pascalParser::SEMI, 0);
}

std::vector<tree::TerminalNode *> pascalParser::LabelDeclarationPartContext::COMMA() {
  return getTokens(pascalParser::COMMA);
}

tree::TerminalNode* pascalParser::LabelDeclarationPartContext::COMMA(size_t i) {
  return getToken(pascalParser::COMMA, i);
}


size_t pascalParser::LabelDeclarationPartContext::getRuleIndex() const {
  return pascalParser::RuleLabelDeclarationPart;
}

void pascalParser::LabelDeclarationPartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pascalListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLabelDeclarationPart(this);
}

void pascalParser::LabelDeclarationPartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<pascalListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLabelDeclarationPart(this);
}


std::any pascalParser::LabelDeclarationPartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<pascalVisitor*>(visitor))
    return parserVisitor->visitLabelDeclarationPart(this);
  else
    return visitor->visitChildren(this);
}
